--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,8 @@
         <!-- 标准的按钮 -->
         <button id="copy" type="button" class="btn btn-secondary">复制</button>
         <button id="post" type="button" class="btn btn-secondary">提交</button>
+        <button id="escape" type="button" class="btn btn-secondary">转义<></button>
+        <button id="parsing" type="button" class="btn btn-secondary">解析<></button>
         <button id="clear" type="button" class="btn btn-secondary">清空</button>
     </div>
     <textarea id="text" class="form-control" style="width: 100%; margin-top: 20px; font-size: 20px" rows="15"></textarea>
@@ -29,6 +31,16 @@
                 set(returnData)
             }
         });
+    });
+
+    $("#escape").click(function () {
+        set(get().replaceAll("<", "&lt;"));
+        set(get().replaceAll(">", "&gt;"))
+    });
+
+    $("#parsing").click(function () {
+        set(get().replaceAll("&lt;", "<"));
+        set(get().replaceAll("&gt;", ">"))
     });
 
     $("#post").click(function () {
@@ -69,11 +81,17 @@
         currentFocus.focus();
         return flag;
     }
+
     function get() {
         return $("#text").val();
     }
+
     function set(text) {
         $("#text").val(text);
+    }
+
+    String.prototype.replaceAll = function(s1,s2){
+        return this.replace(new RegExp(s1,"gm"),s2);
     }
 
 </script>
