--- a/web/index.html
+++ b/web/index.html
@@ -35,5 +35,5 @@
 </body>
 <script src="jQuery/jquery-3.4.1.min.js"></script>
 <script src="jQuery/jQuery.md5.js"></script>
-<script src="index.js"></script>
+<script src="js/index.js"></script>
 </html>
