--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <script src="js/colorpicker.js"></script>
+    <script src="js/emojis.js"></script>
     <style>
         button {
             margin-right: 20px;
@@ -45,6 +46,9 @@
     <div class="row" style="margin-left: 20px; margin-top: 10px">
         <button id="copy_hex" type="button" class="btn btn-secondary">复制hex</button>
         <button id="copy_rgb" type="button" class="btn btn-secondary">复制rgb</button>
+    </div>
+    <div class="row" style="margin-left: 20px; margin-top: 10px">
+        <button id="get_emojis" type="button" class="btn btn-secondary">搜索emoji</button>
     </div>
     <div class="picker" id="picker" style="float: right"></div>
     <textarea id="text" class="form-control" style="width: 100%; margin-top: 0; font-size: 20px;" rows="15"></textarea>
