--- a/web/index.html
+++ b/web/index.html
@@ -44,13 +44,14 @@
         <button id="time_to_time_stamp" type="button" class="btn btn-secondary">时间转时间戳</button>
     </div>
     <div class="row" style="margin-left: 20px; margin-top: 10px">
+        <div class="picker" id="picker" style="float: right; margin-top: 8px; margin-right: 20px"></div>
         <button id="copy_hex" type="button" class="btn btn-secondary">复制hex</button>
         <button id="copy_rgb" type="button" class="btn btn-secondary">复制rgb</button>
     </div>
     <div class="row" style="margin-left: 20px; margin-top: 10px">
-        <button id="get_emojis" type="button" class="btn btn-secondary">搜索emoji</button>
+        <button id="search_emojis" type="button" class="btn btn-secondary">搜索emoji</button>
+        <button id="copy_emojis" type="button" class="btn btn-secondary">复制emoji</button>
     </div>
-    <div class="picker" id="picker" style="float: right"></div>
     <textarea id="text" class="form-control" style="width: 100%; margin-top: 0; font-size: 20px;" rows="15"></textarea>
 
 </body>
