--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,9 @@
             background:#000;
             cursor:pointer;
         }
+        .row {
+            margin-right: 0;
+        }
     </style>
 </head>
 <body style="max-width: 800px; margin:auto; padding: 10px">
