--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
         <button type="button" class="btn btn-secondary" onclick="copy()">复制</button>
         <button type="button" class="btn btn-secondary" onclick="post()">提交</button>
         <button type="button" class="btn btn-secondary" onclick="refresh()">刷新</button>
-        <button type="button" class="btn btn-secondary" onclick="clear()">清空</button>
+        <button type="button" class="btn btn-secondary" onclick="clear_text()">清空</button>
     </div>
     <div class="row" style="margin-left: 20px; margin-top: 10px">
         <button type="button" class="btn btn-secondary" onclick="random_md5()">随机MD5</button>
