--- a/web/index.html
+++ b/web/index.html
@@ -48,7 +48,7 @@
 <!--        <button type="button" class="btn btn-secondary" onclick="parsing_html()">解析HTML</button>-->
     </div>
 
-    <div id="hide">
+    <div id="hide" style="display: none; height: 0">
         <div class="row" style="margin-left: 20px; margin-top: 10px; z-index: 0">
             <button type="button" class="btn btn-secondary" onclick="current_time_stamp()">当前时间戳</button>
             <button type="button" class="btn btn-secondary" onclick="time_stamp_to_time()">时间戳转时间</button>
