--- a/web/index.html
+++ b/web/index.html
@@ -85,4 +85,14 @@
 <script src="laydate-v5.0.9/laydate.js"></script>
 <script src="layui/layui.all.js"></script>
 <script src="js/index.js"></script>
+<!--Baidu Statistics-->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?91f1eac3c1e282bce9a5e6021773f7a1";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 </html>
